[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/first.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/player_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/text_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/background.jpeg" type="Texture" id=4]
[ext_resource path="res://assets/Brian.webp" type="Texture" id=5]
[ext_resource path="res://assets/Leo.png" type="Texture" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 352, 232 )
scale = Vector2( -0.431, 0.431 )
texture = ExtResource( 4 )

[node name="Brian" type="Sprite" parent="."]
visible = false
position = Vector2( 168, 232 )
rotation = 3.14159
scale = Vector2( 1.5, -1.5 )
texture = ExtResource( 5 )

[node name="Leo" type="Sprite" parent="."]
visible = false
position = Vector2( 144, 272 )
scale = Vector2( -0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Leo2" type="Sprite" parent="Leo"]
modulate = Color( 0, 0, 0, 0.2 )
self_modulate = Color( 0.133333, 0.133333, 0.133333, 1 )
show_behind_parent = true
position = Vector2( 21.3333, 10.6667 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 128.0
margin_top = 240.0
margin_right = 248.0
margin_bottom = 339.0
text = "stolen asset to be changed later"
autowrap = true

[node name="player_pos" type="Position2D" parent="."]
position = Vector2( 32, 328 )

[node name="narrator_pos" type="Position2D" parent="."]
position = Vector2( 224, 184 )

[node name="player_box" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 536, 368 )

[node name="text_box" parent="." instance=ExtResource( 3 )]
